--- a/gaffe-engine/build.gradle
+++ b/gaffe-engine/build.gradle
@@ -3,7 +3,15 @@ plugins {
     id 'eclipse'
 }
 
+configurations {
+	autogen.extendsFrom compile
+}
+
 dependencies {
+	implementation "org.gradle:gradle-tooling-api:4.8"
+	implementation 'io.github.classgraph:classgraph:4.6.10'
+	
 	implementation 'org.projectlombok:lombok:1.18.4'
 	implementation 'com.squareup:javapoet:1.11.1'
+
 }
