--- a/gaffe-engine/build.gradle
+++ b/gaffe-engine/build.gradle
@@ -1,17 +1,24 @@
 plugins {
     id 'java-library'
     id 'eclipse'
+    id 'org.inferred.processors' version '2.1.0'
 }
 
 configurations {
-	autogen.extendsFrom compile
+	autogen
+	api.extendsFrom autogen
 }
 
 dependencies {
+	processor 'org.inferred:freebuilder:1.15.0'
+
+	implementation 'org.slf4j:slf4j-simple:1.7.25'
 	implementation "org.gradle:gradle-tooling-api:4.8"
+
 	implementation 'io.github.classgraph:classgraph:4.6.10'
 	
-	implementation 'org.projectlombok:lombok:1.18.4'
+	api 'org.projectlombok:lombok:1.18.4'
 	implementation 'com.squareup:javapoet:1.11.1'
-
+	
+	testImplementation 'junit:junit:4.12'
 }
