--- a/gaffe-engine/build.gradle
+++ b/gaffe-engine/build.gradle
@@ -21,4 +21,5 @@ dependencies {
 	implementation 'com.squareup:javapoet:1.11.1'
 	
 	testImplementation 'junit:junit:4.12'
+	testImplementation 'org.assertj:assertj-core:3.11.1'
 }
