--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,20 @@
+plugins {
+	id 'io.franzbecker.gradle-lombok' version '1.14'
+}
+
 subprojects {
 	repositories {
 	    jcenter()
 	    maven { url 'https://repo.gradle.org/gradle/libs-releases' }
 	}
+	
+	apply plugin: "io.franzbecker.gradle-lombok"
+	
+	lombok { // optional: values below are the defaults
+	    version = "1.18.4"
+	    sha256 = ""
+	}
+	
+	apply plugin: "java-library"
+    apply plugin: "eclipse"
 }
