--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,17 @@ subprojects {
 	
 	apply plugin: "java-library"
     apply plugin: "eclipse"
+    
+	dependencies {
+		testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
+		testImplementation 'org.assertj:assertj-core:3.11.1'
+		testImplementation 'org.mockito:mockito-core:2.23.4'
+	}
+	
+	test {
+		useJUnitPlatform()
+		testLogging {
+			events "passed", "skipped", "failed"
+		}
+	}
 }
