--- a/gaffe-engine/build.gradle
+++ b/gaffe-engine/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'eclipse'
+    id 'antlr'
     id 'org.inferred.processors' version '2.1.0'
 }
 
@@ -11,6 +12,7 @@ configurations {
 
 dependencies {
 	processor 'org.inferred:freebuilder:1.15.0'
+	antlr 'org.antlr:antlr4:4.7.2'
 
 	implementation 'org.slf4j:slf4j-simple:1.7.25'
 	implementation "org.gradle:gradle-tooling-api:4.8"
